--- a/index.htm
+++ b/index.htm
@@ -47,69 +47,69 @@
 				<input type="submit" value="submit" style="display:none;">
 			</form>
 		</div>
-		<div style="font-size: 18px;"><a href="https://regalgoblins.com/spells.php?caster=Wizard">All Wizard Spells</a></div>
+		<div style="font-size: 18px;"><a href="https://vilify-13.github.io/Wizard/All_Wizard.htm">All Wizard Spells</a></div>
 		<div>Spells by Specialization: 
-			<a href="https://regalgoblins.com/spells.php?specialization=abjurer&amp;caster=Wizard">Abjurer</a>
-			<a href="https://regalgoblins.com/spells.php?specialization=conjurer&amp;caster=Wizard">Conjurer</a>
-			<a href="https://regalgoblins.com/spells.php?specialization=diviner&amp;caster=Wizard">Diviner</a>
-			<a href="https://regalgoblins.com/spells.php?specialization=enchanter&amp;caster=Wizard">Enchanter</a>
-			<a href="https://regalgoblins.com/spells.php?specialization=illusionist&amp;caster=Wizard">Illusionist</a>
-			<a href="https://regalgoblins.com/spells.php?specialization=invocation&amp;caster=Wizard">Invoker</a>
-			<a href="https://regalgoblins.com/spells.php?specialization=necromancer&amp;caster=Wizard">Necromancer</a>
-			<a href="https://regalgoblins.com/spells.php?specialization=transmuter&amp;caster=Wizard">Transmuter</a>
-			<a href="https://regalgoblins.com/spells.php?specialization=dimensionalist&amp;caster=Wizard">Dimensionalist</a>
+			<a href="https://vilify-13.github.io/Wizard/Specialization/Abjurer.htm">Abjurer</a>
+			<a href="https://vilify-13.github.io/Wizard/Specialization/Conjurer.htm">Conjurer</a>
+			<a href="https://vilify-13.github.io/Wizard/Specialization/Diviner.htm">Diviner</a>
+			<a href="https://vilify-13.github.io/Wizard/Specialization/Enchanter.htm">Enchanter</a>
+			<a href="https://vilify-13.github.io/Wizard/Specialization/Illusionist.htm">Illusionist</a>
+			<a href="https://vilify-13.github.io/Wizard/Specialization/Invoker.htm">Invoker</a>
+			<a href="https://vilify-13.github.io/Wizard/Specialization/Necromancer.htm">Necromancer</a>
+			<a href="https://vilify-13.github.io/Wizard/Specialization/Transmuter.htm">Transmuter</a>
+			<a href="https://vilify-13.github.io/Wizard/Specialization/Dimensionalist.htm">Dimensionalist</a>
 		</div>
 		<div>Spells by School:
-			<a href="https://regalgoblins.com/spells.php?school=Abjuration&amp;caster=Wizard">Abjuration</a>
-			<a href="https://regalgoblins.com/spells.php?school=Alteration&amp;caster=Wizard">Alteration</a>
-			<a href="https://regalgoblins.com/spells.php?school=Conjuration&amp;caster=Wizard">Conjuration/Summoning</a>
-			<a href="https://regalgoblins.com/spells.php?school=Divination&amp;caster=Wizard">Divination</a>
-			<a href="https://regalgoblins.com/spells.php?school=Enchantment&amp;caster=Wizard">Enchantment/Charm</a>
-			<a href="https://regalgoblins.com/spells.php?school=Evocation&amp;caster=Wizard">Invocation/Evocation</a>
-			<a href="https://regalgoblins.com/spells.php?school=Illusion&amp;caster=Wizard">Illusion/Phantasm</a>
-			<a href="https://regalgoblins.com/spells.php?school=Necromancy&amp;caster=Wizard">Necromancy</a>
+			<a href="https://vilify-13.github.io/Wizard/School/Abjuration.htm">Abjuration</a>
+			<a href="https://vilify-13.github.io/Wizard/School/Alteration.htm">Alteration</a>
+			<a href="https://vilify-13.github.io/Wizard/School/Conjuration.htm">Conjuration/Summoning</a>
+			<a href="https://vilify-13.github.io/Wizard/School/Divination.htm">Divination</a>
+			<a href="https://vilify-13.github.io/Wizard/School/Enchantment.htm">Enchantment/Charm</a>
+			<a href="https://vilify-13.github.io/Wizard/School/Evocation.htm">Invocation/Evocation</a>
+			<a href="https://vilify-13.github.io/Wizard/School/Illusion.htm">Illusion/Phantasm</a>
+			<a href="https://vilify-13.github.io/Wizard/School/Necromancy.htm">Necromancy</a>
 		</div>
-		<div style="font-size: 18px;"><a href="https://regalgoblins.com/spells.php?caster=Priest">All Priest Spells</a></div>
+		<div style="font-size: 18px;"><a href="https://vilify-13.github.io/Priest/All_Priest.htm">All Priest Spells</a></div>
 			<div>Spells by Sphere:
-				<a href="https://regalgoblins.com/spells.php?sphere=All">All</a>
-				<a href="https://regalgoblins.com/spells.php?sphere=Animal">Animal</a>
-				<a href="https://regalgoblins.com/spells.php?sphere=Astral">Astral</a>
-				<a href="https://regalgoblins.com/spells.php?sphere=Chaos">Chaos</a>
-				<a href="https://regalgoblins.com/spells.php?sphere=Charm">Charm</a>
-				<a href="https://regalgoblins.com/spells.php?sphere=Combat">Combat</a>
-				<a href="https://regalgoblins.com/spells.php?sphere=Creation">Creation</a>
-				<a href="https://regalgoblins.com/spells.php?sphere=Divination">Divination</a>
-				<a href="https://regalgoblins.com/spells.php?sphere=Elemental%20Air">Elemntal Air</a>
-				<a href="https://regalgoblins.com/spells.php?sphere=Elemental%20Earth">Elemental Earth</a>
-				<a href="https://regalgoblins.com/spells.php?sphere=Elemental%20Fire">Elemental Fire</a>
-				<a href="https://regalgoblins.com/spells.php?sphere=Elemental%20Water">Elemental Water</a>
-				<a href="https://regalgoblins.com/spells.php?sphere=Guardian">Guardian</a>
-				<a href="https://regalgoblins.com/spells.php?sphere=Healing">Healing</a>
-				<a href="https://regalgoblins.com/spells.php?sphere=Law">Law</a>
-				<a href="https://regalgoblins.com/spells.php?sphere=Necromantic">Necromantic</a>
-				<a href="https://regalgoblins.com/spells.php?sphere=Numbers">Numbers</a>
-				<a href="https://regalgoblins.com/spells.php?sphere=Plant">Plant</a>
-				<a href="https://regalgoblins.com/spells.php?sphere=Protection">Protection</a>
-				<a href="https://regalgoblins.com/spells.php?sphere=Summoning">Summoning</a>
-				<a href="https://regalgoblins.com/spells.php?sphere=Sun">Sun</a>
-				<a href="https://regalgoblins.com/spells.php?sphere=Thought">Thought</a>
-				<a href="https://regalgoblins.com/spells.php?sphere=Time">Time</a>
-				<a href="https://regalgoblins.com/spells.php?sphere=Travelers">Travelers</a>
-				<a href="https://regalgoblins.com/spells.php?sphere=War">War</a>
-				<a href="https://regalgoblins.com/spells.php?sphere=Wards">Wards</a>
-				<a href="https://regalgoblins.com/spells.php?sphere=Weather">Weather</a>
+				<a href="https://vilify-13.github.io/Priest/Sphere/All.htm">All</a>
+				<a href="https://vilify-13.github.io/Priest/Sphere/Animal.htm">Animal</a>
+				<a href="https://vilify-13.github.io/Priest/Sphere/Astral.htm">Astral</a>
+				<a href="https://vilify-13.github.io/Priest/Sphere/Chaos.htm">Chaos</a>
+				<a href="https://vilify-13.github.io/Priest/Sphere/Charm.htm">Charm</a>
+				<a href="https://vilify-13.github.io/Priest/Sphere/Combat.htm">Combat</a>
+				<a href="https://vilify-13.github.io/Priest/Sphere/Creation.htm">Creation</a>
+				<a href="https://vilify-13.github.io/Priest/Sphere/Divination.htm">Divination</a>
+				<a href="https://vilify-13.github.io/Priest/Sphere/Elemental_Air.htm">Elemental Air</a>
+				<a href="https://vilify-13.github.io/Priest/Sphere/Elemental_Earth.htm">Elemental Earth</a>
+				<a href="https://vilify-13.github.io/Priest/Sphere/Elemental_Fire.htm">Elemental Fire</a>
+				<a href="https://vilify-13.github.io/Priest/Sphere/Elemental_Water.htm">Elemental Water</a>
+				<a href="https://vilify-13.github.io/Priest/Sphere/Guardian.htm">Guardian</a>
+				<a href="https://vilify-13.github.io/Priest/Sphere/Healing.htm">Healing</a>
+				<a href="https://vilify-13.github.io/Priest/Sphere/Law.htm">Law</a>
+				<a href="https://vilify-13.github.io/Priest/Sphere/Necromantic.htm">Necromantic</a>
+				<a href="https://vilify-13.github.io/Priest/Sphere/Numbers.htm">Numbers</a>
+				<a href="https://vilify-13.github.io/Priest/Sphere/Plant.htm">Plant</a>
+				<a href="https://vilify-13.github.io/Priest/Sphere/Protection.htm">Protection</a>
+				<a href="https://vilify-13.github.io/Priest/Sphere/Summoning.htm">Summoning</a>
+				<a href="https://vilify-13.github.io/Priest/Sphere/Sun.htm">Sun</a>
+				<a href="https://vilify-13.github.io/Priest/Sphere/Thought.htm">Thought</a>
+				<a href="https://vilify-13.github.io/Priest/Sphere/Time.htm">Time</a>
+				<a href="https://vilify-13.github.io/Priest/Sphere/Travelers.htm">Travelers</a>
+				<a href="https://vilify-13.github.io/Priest/Sphere/War.htm">War</a>
+				<a href="https://vilify-13.github.io/Priest/Sphere/Wards.htm">Wards</a>
+				<a href="https://vilify-13.github.io/Priest/Sphere/Weather.htm">Weather</a>
 			</div>
 			<div>Spells by Diety:
-				<a href="https://regalgoblins.com/spells.php?player=Astair">Arstor</a>
-				<a href="https://regalgoblins.com/spells.php?player=Martha">Karah</a>
-				<a href="https://regalgoblins.com/spells.php?player=Voraci">Runath</a>
-				<a href="https://regalgoblins.com/spells.php?player=Malkis">Devras</a> | 
-				<a href="https://regalgoblins.com/spells.php?player=Tempos">Ako</a>
-				<a href="https://regalgoblins.com/spells.php?player=Nadinis">Ephra</a>
-				<a href="https://regalgoblins.com/spells.php?player=Felumbra">Ralah</a> | 
-				<a href="https://regalgoblins.com/spells.php?player=Illumis">Lumnis</a>
-				<a href="https://regalgoblins.com/spells.php?player=Relkor">Sartanis</a> | 
-				<a href="https://regalgoblins.com/spells.php?player=Agepa">Ampharae</a>
+				<a href="https://vilify-13.github.io/Priest/Deity/Arstor.htm">Arstor</a>
+				<a href="https://vilify-13.github.io/Priest/Deity/Karah.htm">Karah</a>
+				<a href="https://vilify-13.github.io/Priest/Deity/Runath.htm">Runath</a>
+				<a href="https://vilify-13.github.io/Priest/Deity/Devras.htm">Devras</a> | 
+				<a href="https://vilify-13.github.io/Priest/Deity/Ako.htm">Ako</a>
+				<a href="https://vilify-13.github.io/Priest/Deity/Ephra.htm">Ephra</a>
+				<a href="https://vilify-13.github.io/Priest/Deity/Ralah.htm">Ralah</a> | 
+				<a href="https://vilify-13.github.io/Priest/Deity/Lumnis.htm">Lumnis</a>
+				<a href="https://vilify-13.github.io/Priest/Deity/Sartanis.htm">Sartanis</a> | 
+				<a href="https://vilify-13.github.io/Priest/Deity/Ampharae.htm">Ampharae</a>
 				<a href="https://regalgoblins.com/spells.php?player=Aaris">Taaris</a>
 				<a href="https://regalgoblins.com/spells.php?player=Bellum">Thugal</a>
 				<a href="https://regalgoblins.com/spells.php?player=Dorbaff%20/%20Guam">Ultarius / Yttria</a>
