--- a/Wizard/Specialization/Abjurer.htm
+++ b/Wizard/Specialization/Abjurer.htm
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
-<html lang="en-US">
-<head>
+<html lang="en-US"><head>
+<meta http-equiv="content-type" content="text/html; charset=UTF-8">
 <meta charset="UTF-8">
-<meta name="description" content="Koibu and Regalgoblins HQ. D&D / RPG VODs, Tools, and Community">
-<meta name="keywords" content="D&D, RPG, RPGs, DnD, Dungeons & Dragons, Rollplay, Misscliks, DwD, Dicing with Death, Hardcore Heroes, Frozen Frontier, Akuban Knights, Arcadia, AoS, Age of Strife">
+<meta name="description" content="Koibu and Regalgoblins HQ. D&amp;D / RPG VODs, Tools, and Community">
+<meta name="keywords" content="D&amp;D, RPG, RPGs, DnD, Dungeons &amp; Dragons, Rollplay, Misscliks, DwD, Dicing with Death, Hardcore Heroes, Frozen Frontier, Akuban Knights, Arcadia, AoS, Age of Strife">
 <meta name="author" content="Neal Erickson">
-<link rel="shortcut icon" href="/images/favicon.ico" />
-<link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
-<script> // Google Analytics Tracking
+<link rel="shortcut icon" href="https://regalgoblins.com/images/favicon.ico">
+<link href="http://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" type="text/css">
+<script async="" src="index_files/analytics.js"></script><script> // Google Analytics Tracking
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
@@ -16,9 +16,9 @@
   ga('create', 'UA-80475120-1', 'auto');
   ga('send', 'pageview');
 </script> 
-<script src="/scripts/jquery-3.0.0.min.js"></script>
+<script src="index_files/jquery-3.0.0.min.js"></script>
 <!-- <script src="/scripts/twitch.js"></script> For the Streambadge but creates too much work for the server (somehow)-->
-	<link href="spells.css?v=17" type="text/css" rel="stylesheet" />
+	<link href="index_files/spells.css" type="text/css" rel="stylesheet">
 	<style type="text/css" media="print">
 		#description-content {
 		  overflow: hidden;
@@ -27,9 +27,9 @@
 			 display:none;
 		 }
 	</style>
-	<script src="scripts/clipboard.js"></script>
+	<script src="index_files/clipboard.js"></script>
 	
-	<title>Spells List: AD&D 2.n</title>
+	<title>Spells List: AD&amp;D 2.n</title>
 </head>
 <body>
 		<header id="menu">
@@ -43,92 +43,86 @@
 			<div class="alteration"><header>Alteration/Transmutation</header></div>
 			<div class="divination"><header>Divination</header></div>
 			<form method="POST" action="https://regalgoblins.com" style="float:right;">
-				<input class="password" name="dmpassword" type="password" />
-				<input type="submit" value="submit" style="display:none;" />
+				<input class="password" name="dmpassword" type="password">
+				<input type="submit" value="submit" style="display:none;">
 			</form>
 		</div>
-		<div style="font-size: 18px;"><a href="spells.php?caster=Wizard">All Wizard Spells</a></div>
+		<div style="font-size: 18px;"><a href="https://vilify-13.github.io/Wizard/All_Wizard.htm">All Wizard Spells</a></div>
 		<div>Spells by Specialization: 
-			<a href="spells.php?specialization=abjurer&caster=Wizard">Abjurer</a>
-			<a href="spells.php?specialization=conjurer&caster=Wizard">Conjurer</a>
-			<a href="spells.php?specialization=diviner&caster=Wizard">Diviner</a>
-			<a href="spells.php?specialization=enchanter&caster=Wizard">Enchanter</a>
-			<a href="spells.php?specialization=illusionist&caster=Wizard">Illusionist</a>
-			<a href="spells.php?specialization=invocation&caster=Wizard">Invoker</a>
-			<a href="spells.php?specialization=necromancer&caster=Wizard">Necromancer</a>
-			<a href="spells.php?specialization=transmuter&caster=Wizard">Transmuter</a>
-			<a href="spells.php?specialization=dimensionalist&caster=Wizard">Dimensionalist</a>
+			<a href="https://vilify-13.github.io/Wizard/Specialization/Abjurer.htm">Abjurer</a>
+			<a href="https://vilify-13.github.io/Wizard/Specialization/Conjurer.htm">Conjurer</a>
+			<a href="https://vilify-13.github.io/Wizard/Specialization/Diviner.htm">Diviner</a>
+			<a href="https://vilify-13.github.io/Wizard/Specialization/Enchanter.htm">Enchanter</a>
+			<a href="https://vilify-13.github.io/Wizard/Specialization/Illusionist.htm">Illusionist</a>
+			<a href="https://vilify-13.github.io/Wizard/Specialization/Invoker.htm">Invoker</a>
+			<a href="https://vilify-13.github.io/Wizard/Specialization/Necromancer.htm">Necromancer</a>
+			<a href="https://vilify-13.github.io/Wizard/Specialization/Transmuter.htm">Transmuter</a>
+			<a href="https://vilify-13.github.io/Wizard/Specialization/Dimensionalist.htm">Dimensionalist</a>
 		</div>
 		<div>Spells by School:
-			<a href="spells.php?school=Abjuration&caster=Wizard">Abjuration</a>
-			<a href="spells.php?school=Alteration&caster=Wizard">Alteration</a>
-			<a href="spells.php?school=Conjuration&caster=Wizard">Conjuration/Summoning</a>
-			<a href="spells.php?school=Divination&caster=Wizard">Divination</a>
-			<a href="spells.php?school=Enchantment&caster=Wizard">Enchantment/Charm</a>
-			<a href="spells.php?school=Evocation&caster=Wizard">Invocation/Evocation</a>
-			<a href="spells.php?school=Illusion&caster=Wizard">Illusion/Phantasm</a>
-			<a href="spells.php?school=Necromancy&caster=Wizard">Necromancy</a>
+			<a href="https://vilify-13.github.io/Wizard/School/Abjuration.htm">Abjuration</a>
+			<a href="https://vilify-13.github.io/Wizard/School/Alteration.htm">Alteration</a>
+			<a href="https://vilify-13.github.io/Wizard/School/Conjuration.htm">Conjuration/Summoning</a>
+			<a href="https://vilify-13.github.io/Wizard/School/Divination.htm">Divination</a>
+			<a href="https://vilify-13.github.io/Wizard/School/Enchantment.htm">Enchantment/Charm</a>
+			<a href="https://vilify-13.github.io/Wizard/School/Evocation.htm">Invocation/Evocation</a>
+			<a href="https://vilify-13.github.io/Wizard/School/Illusion.htm">Illusion/Phantasm</a>
+			<a href="https://vilify-13.github.io/Wizard/School/Necromancy.htm">Necromancy</a>
 		</div>
-		<div style="font-size: 18px;"><a href="spells.php?caster=Priest">All Priest Spells</a></div>
+		<div style="font-size: 18px;"><a href="https://vilify-13.github.io/Priest/All_Priest.htm">All Priest Spells</a></div>
 			<div>Spells by Sphere:
-				<a href="spells.php?sphere=All">All</a>
-				<a href="spells.php?sphere=Animal">Animal</a>
-				<a href="spells.php?sphere=Astral">Astral</a>
-				<a href="spells.php?sphere=Chaos">Chaos</a>
-				<a href="spells.php?sphere=Charm">Charm</a>
-				<a href="spells.php?sphere=Combat">Combat</a>
-				<a href="spells.php?sphere=Creation">Creation</a>
-				<a href="spells.php?sphere=Divination">Divination</a>
-				<a href="spells.php?sphere=Elemental Air">Elemntal Air</a>
-				<a href="spells.php?sphere=Elemental Earth">Elemental Earth</a>
-				<a href="spells.php?sphere=Elemental Fire">Elemental Fire</a>
-				<a href="spells.php?sphere=Elemental Water">Elemental Water</a>
-				<a href="spells.php?sphere=Guardian">Guardian</a>
-				<a href="spells.php?sphere=Healing">Healing</a>
-				<a href="spells.php?sphere=Law">Law</a>
-				<a href="spells.php?sphere=Necromantic">Necromantic</a>
-				<a href="spells.php?sphere=Numbers">Numbers</a>
-				<a href="spells.php?sphere=Plant">Plant</a>
-				<a href="spells.php?sphere=Protection">Protection</a>
-				<a href="spells.php?sphere=Summoning">Summoning</a>
-				<a href="spells.php?sphere=Sun">Sun</a>
-				<a href="spells.php?sphere=Thought">Thought</a>
-				<a href="spells.php?sphere=Time">Time</a>
-				<a href="spells.php?sphere=Travelers">Travelers</a>
-				<a href="spells.php?sphere=War">War</a>
-				<a href="spells.php?sphere=Wards">Wards</a>
-				<a href="spells.php?sphere=Weather">Weather</a>
+				<a href="https://vilify-13.github.io/Priest/Sphere/All.htm">All</a>
+				<a href="https://vilify-13.github.io/Priest/Sphere/Animal.htm">Animal</a>
+				<a href="https://vilify-13.github.io/Priest/Sphere/Astral.htm">Astral</a>
+				<a href="https://vilify-13.github.io/Priest/Sphere/Chaos.htm">Chaos</a>
+				<a href="https://vilify-13.github.io/Priest/Sphere/Charm.htm">Charm</a>
+				<a href="https://vilify-13.github.io/Priest/Sphere/Combat.htm">Combat</a>
+				<a href="https://vilify-13.github.io/Priest/Sphere/Creation.htm">Creation</a>
+				<a href="https://vilify-13.github.io/Priest/Sphere/Divination.htm">Divination</a>
+				<a href="https://vilify-13.github.io/Priest/Sphere/Elemental_Air.htm">Elemental Air</a>
+				<a href="https://vilify-13.github.io/Priest/Sphere/Elemental_Earth.htm">Elemental Earth</a>
+				<a href="https://vilify-13.github.io/Priest/Sphere/Elemental_Fire.htm">Elemental Fire</a>
+				<a href="https://vilify-13.github.io/Priest/Sphere/Elemental_Water.htm">Elemental Water</a>
+				<a href="https://vilify-13.github.io/Priest/Sphere/Guardian.htm">Guardian</a>
+				<a href="https://vilify-13.github.io/Priest/Sphere/Healing.htm">Healing</a>
+				<a href="https://vilify-13.github.io/Priest/Sphere/Law.htm">Law</a>
+				<a href="https://vilify-13.github.io/Priest/Sphere/Necromantic.htm">Necromantic</a>
+				<a href="https://vilify-13.github.io/Priest/Sphere/Numbers.htm">Numbers</a>
+				<a href="https://vilify-13.github.io/Priest/Sphere/Plant.htm">Plant</a>
+				<a href="https://vilify-13.github.io/Priest/Sphere/Protection.htm">Protection</a>
+				<a href="https://vilify-13.github.io/Priest/Sphere/Summoning.htm">Summoning</a>
+				<a href="https://vilify-13.github.io/Priest/Sphere/Sun.htm">Sun</a>
+				<a href="https://vilify-13.github.io/Priest/Sphere/Thought.htm">Thought</a>
+				<a href="https://vilify-13.github.io/Priest/Sphere/Time.htm">Time</a>
+				<a href="https://vilify-13.github.io/Priest/Sphere/Travelers.htm">Travelers</a>
+				<a href="https://vilify-13.github.io/Priest/Sphere/War.htm">War</a>
+				<a href="https://vilify-13.github.io/Priest/Sphere/Wards.htm">Wards</a>
+				<a href="https://vilify-13.github.io/Priest/Sphere/Weather.htm">Weather</a>
 			</div>
 			<div>Spells by Diety:
-				<a href="spells.php?player=Astair">Astair</a>
-				<a href="spells.php?player=Martha">Martha</a>
-				<a href="spells.php?player=Voraci">Voraci</a>
-				<a href="spells.php?player=Malkis">Malkis</a> | 
-				<a href="spells.php?player=Tempos">Tempos</a>
-				<a href="spells.php?player=Nadinis">Nadinis</a>
-				<a href="spells.php?player=Felumbra">Felumbra</a> | 
-				<a href="spells.php?player=Illumis">Illumis</a>
-				<a href="spells.php?player=Relkor">Relkor</a> | 
-				<a href="spells.php?player=Agepa">Agepa</a>
-				<a href="spells.php?player=Aaris">Aaris</a>
-				<a href="spells.php?player=Bellum">Bellum</a>
-				<a href="spells.php?player=Chis">Chis</a>
-				<a href="spells.php?player=Dorbaff / Guam">Dorbaff / Guam</a>
-				<a href="spells.php?player=Efra">Efra</a>
-				<a href="spells.php?player=Jexel">Jexel</a>
-				<a href="spells.php?player=Matrigal">Matrigal</a>
-				<a href="spells.php?player=Nerual">Nerual</a>
-				<a href="spells.php?player=Ponos">Ponos</a>
-				<a href="spells.php?player=Quantarious">Quantarious</a>
-				<a href="spells.php?player=Reluna">Reluna</a>
-				<a href="spells.php?player=Sayor">Sayor</a>
-				<a href="spells.php?player=Solt">Solt</a>
-				<a href="spells.php?player=Terrasa">Terrasa</a>
-				<a href="spells.php?player=Terrin">Terrin</a>
-				<a href="spells.php?player=Velmontarious">Velmontarious</a>
-				<a href="spells.php?player=Velthara">Velthara</a>
-				<a href="spells.php?player=Womaatoar">Womaatoar</a>
-	</header>
+				<a href="https://vilify-13.github.io/Priest/Deity/Arstor.htm">Arstor</a>
+				<a href="https://vilify-13.github.io/Priest/Deity/Karah.htm">Karah</a>
+				<a href="https://vilify-13.github.io/Priest/Deity/Runath.htm">Runath</a>
+				<a href="https://vilify-13.github.io/Priest/Deity/Devras.htm">Devras</a> | 
+				<a href="https://vilify-13.github.io/Priest/Deity/Ako.htm">Ako</a>
+				<a href="https://vilify-13.github.io/Priest/Deity/Ephra.htm">Ephra</a>
+				<a href="https://vilify-13.github.io/Priest/Deity/Ralah.htm">Ralah</a> | 
+				<a href="https://vilify-13.github.io/Priest/Deity/Lumnis.htm">Lumnis</a>
+				<a href="https://vilify-13.github.io/Priest/Deity/Sartanis.htm">Sartanis</a> | 
+				<a href="https://vilify-13.github.io/Priest/Deity/Ampharae.htm">Ampharae</a>
+				<a href="https://regalgoblins.com/spells.php?player=Aaris">Taaris</a>
+				<a href="https://regalgoblins.com/spells.php?player=Bellum">Thugal</a>
+				<a href="https://regalgoblins.com/spells.php?player=Dorbaff%20/%20Guam">Ultarius / Yttria</a>
+				<a href="https://regalgoblins.com/spells.php?player=Jexel">Unlo</a>
+				<a href="https://regalgoblins.com/spells.php?player=Matrigal">Natrea</a>
+				<a href="https://regalgoblins.com/spells.php?player=Quantarious">Koze</a>
+				<a href="https://regalgoblins.com/spells.php?player=Reluna">Thera</a>
+				<a href="https://regalgoblins.com/spells.php?player=Sayor">Joram</a>
+				<a href="https://regalgoblins.com/spells.php?player=Solt">Nilmatar</a>
+				<a href="https://regalgoblins.com/spells.php?player=Terrasa">Laerissa</a>
+				<a href="https://regalgoblins.com/spells.php?player=Velmontarious">Hequa</a>
+				<a href="https://regalgoblins.com/spells.php?player=Velthara">Darmeth</a>
+	</div></header>
 	<div data-id="23" class="card abjuration" data-school="Abjuration" data-caster="wizard" >
 		<header class="clearfix">
 			<button class="level" data-clipboard-action="copy">1</button>
