--- a/index.htm
+++ b/index.htm
@@ -16,9 +16,9 @@
   ga('create', 'UA-80475120-1', 'auto');
   ga('send', 'pageview');
 </script> 
-<script src="index_files/jquery-3.0.0.min.js"></script>
+<script src="https://github.com/Vilify-13/Vilify-13.github.io/blob/main/index_files/jquery-3.0.0.min.js"></script>
 <!-- <script src="/scripts/twitch.js"></script> For the Streambadge but creates too much work for the server (somehow)-->
-	<link href="index_files/spells.css" type="text/css" rel="stylesheet">
+	<link href="https://github.com/Vilify-13/Vilify-13.github.io/blob/main/index_files/spells.css" type="text/css" rel="stylesheet">
 	<style type="text/css" media="print">
 		#description-content {
 		  overflow: hidden;
@@ -27,7 +27,7 @@
 			 display:none;
 		 }
 	</style>
-	<script src="index_files/clipboard.js"></script>
+	<script src="https://github.com/Vilify-13/Vilify-13.github.io/blob/main/index_files/clipboard.js"></script>
 	
 	<title>Spells List: AD&amp;D 2.n</title>
 </head>
@@ -47,10 +47,10 @@
 				<input type="submit" value="submit" style="display:none;">
 			</form>
 		</div>
-		<div style="font-size: 18px;"><a href="https://vilify-13.github.io/Wizard/All_Wizard.htm">All Wizard Spells</a></div>
+		<div style="font-size: 18px;"><a href="https://github.com/Vilify-13/Vilify-13.github.io/blob/main/Wizard/Specialization/All_Wizard.htm">All Wizard Spells</a></div>
 		<div>Spells by Specialization: 
-			<a href="https://vilify-13.github.io/Wizard/Specialization/Abjurer.htm">Abjurer</a>
-			<a href="https://vilify-13.github.io/Wizard/Specialization/Conjurer.htm">Conjurer</a>
+			<a href="https://github.com/Vilify-13/Vilify-13.github.io/blob/main/Wizard/Specialization/Abjurer.htm">Abjurer</a>
+			<a href="https://github.com/Vilify-13/Vilify-13.github.io/blob/main/Wizard/Specialization/Conjurer.htm">Conjurer</a>
 			<a href="https://vilify-13.github.io/Wizard/Specialization/Diviner.htm">Diviner</a>
 			<a href="https://vilify-13.github.io/Wizard/Specialization/Enchanter.htm">Enchanter</a>
 			<a href="https://vilify-13.github.io/Wizard/Specialization/Illusionist.htm">Illusionist</a>
